Fix scrolling/overflow table issues when choosing an account

--- a/src/styles/popup/view/fees.less
+++ b/src/styles/popup/view/fees.less
@@ -46,7 +46,7 @@
 
     .select-fee-list {
         flex: 1;
-        overflow-y: scroll;
+        overflow-y: auto;
 
         button {
             display: flex;
